fix: aligned icons to scale properly

--- a/src/components/ui/button/button.component.scss
+++ b/src/components/ui/button/button.component.scss
@@ -92,9 +92,12 @@
   }
 
   :host([kind='icon']) & {
-    aspect-ratio: 1 / 1;
+    aspect-ratio: 1;
     padding: utils.size(1);
     position: relative;
+
+    font-size: 0;
+    line-height: 0;
 
     &::before {
       content: '';
